updated html file index in content description and updated the css file style using the moblie first approach; in the header using flex display and fixed position have aligned the navigation bar

--- a/asset/css/style.css
+++ b/asset/css/style.css
@@ -1,75 +1,177 @@
+* {
+    box-sizing: border-box;
+}
+
 body {
-    margin: 10px 20px;
+    font-family: 'Varela Round', sans-serif;
+    line-height: 1.6;
+    color: #3a3a3a;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    height: 100vh;
 }
 
-header {
-    background-color: rgba(119,90,90,0.6);
+.main-content {
+    flex: 1;
+}
+
+p {
+    font-size: .95em;
+    margin-bottom: 1.8em;
+}
+
+h2,
+h3,
+a {
+    color: darkgoldenrod;
+}
+
+
+a {
+    text-decoration: none;
+}
+
+img {
     width: 100%;
-    position: fixed;
-    right: 0;
+    margin-bottom: 1em;
+}
+
+.container ul {
+    padding: 0;
+    list-style: none;
+}
+
+h4 {
+    margin-top: 0;
+}
+
+figure {
+    margin: 0;
+    line-height: 0;
+    position: relative;
+}
+
+figcaption {
+    font-size: .9em;
+    line-height: 1.5;
+    color: darkgray;
+    padding: 1em;
+    background: rgba(184, 134, 11, .85);
+    position: absolute;
     top: 0;
-        
+    width: 100%;
 }
 
-section {
-    margin-top: 70px;
-    font-family: Arial, Helvetica, sans-serif;
-    padding: 5px 30px;
+form {
+    padding-top: 3%;
+    width: 50%;
 }
 
-article {
-    font-size: 15px;
-    text-align: justify;
-    line-height: 15px;
+form input[type=text],
+input[type=password],
+input[type=email] {
+    width: 100%;
+    padding: 2% 4%;
+    margin: 2%;
+}
+
+form select {
+    width: 100%;
+    padding: 3% 4%;
+    border: none;
+    background-color: #f1f1f1;
+    margin: 2%;
+  }
+
+form textarea {
+    width: 100%;
+    height: 150px;
+    padding: 2% 4%;
+    border: 1px solid lightgray;
+    resize: none;
+    margin: 2%;
+}
+
+.submit-button {
+    background-color: rgb(76, 175, 92);
+    border: none;
+    color: white;
+    padding: 4% 8%;
+    text-decoration: none;
+    margin: 1% 2%;
+    cursor: pointer;
+}
+
+
+.banner h1 {
+    margin: 0;
+}
+
+.banner {
+    padding: 20px;
+}
+
+.banner img {
+    width: 250px;
+    height: 250px;
+    border-radius: 50%;
+    margin-top: 10px;
+}
+
+.name {
+    font-size: 1.25em;
+}
+
+.main-nav a {
+    font-size: .95em;
+    color: #222;
+    text-transform: uppercase;    
+}
+
+.main-nav a:hover {
+    color: darkgoldenrod;
+}
+
+.banner {
+    color: darkgoldenrod;
+    background: #222;
+}
+
+.main-footer {
+    background: #555;
+    color: darkgoldenrod;
+    padding: 2em 0;
+    margin-top: 30px;
+}
+
+.logo {
+    width: 400px;
+}
+
+.container,
+.main-content,
+.col {
+    width: 95%;
+    margin: 0 auto;
+}
+
+.banner,
+.main-footer,
+.name,
+.main-nav {
+    text-align: center;
 }
 
 .title {
     font-size: 23px;
     font-weight: bold;
+    color: darkgoldenrod;
 }
 
 .date {
     font-style: italic;
     font-size: 15px;
+    margin-bottom: 8%;
     text-transform: uppercase;
-}
-
-
-nav ul li {
-    display: inline-block;
-    padding: 10px 3px;
-    font-size: 20px;
-
-}
-
-nav ul li a {
-    text-decoration: none;
-}
-
-nav ul li a:link {
-    background-color: tan;
-}
-
-nav ul li a:active {
-    background-color: gray;
-}
-
-nav ul li:hover {
-    background-color: lightgreen;
-}
-
-nav ul li a:visited {
-    background-color: grey;
-}
-
-img {
-    float: left;
-    width: 200px;
-    height: 200px;
-    border-radius: 50%;
-    margin: 0 20px;
-}
-
-#clr {
-    clear: left;
 }
